<resources>
    <string name="home_page">Home page</string>
    <string name="list_patients">List patients</string>
    <string name="health_page">Health page</string>
    <string name="profile_page">Profile page</string>
    <string name="payments_page">Payments Page</string>
    <string name="next">Next</string>
    <string name="choose_the_language">Choose the language</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="like_to_00_00">Like to [00:00]</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="press_here">Press here</string>
    <string name="time">Time</string>
    <string name="value">Value</string>
    <string name="save_record">Save record</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="rate_our_center">Rate our Center</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="send">Send</string>
    <string name="emergency_numbers">Emergency numbers</string>
    <string name="my_center">My center</string>
    <string name="ambulance">Ambulance</string>
    <string name="police">Police</string>
    <string name="firefighter">FireFighter</string>
    <string name="our_services">Our services</string>
    <string name="add_measurement">Add measurement</string>
    <string name="places_of_interest">Places of Interest</string>
    <string name="name_and_surname">Name and Surname</string>
    <string name="_00_years_old">00 years old</string>
    <string name="patient_demographics">Patient demographics</string>
    <string name="patient_measurement">Patient measurement</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log-in</string>
    <string name="or">Or</string>
    <string name="log_in_with_qr_code">Log-in with QR-Code</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="sign_up">Sign-up!</string>
    <string name="who_are_you">Who are you?</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="click_here_if_you_want_to_log_in_as_the_default_user">Click here if you want to log in as the default user</string>
    <string name="default_user">Default User</string>
    <string name="reception_centre">Reception centre</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="email_example">centroaccglienza@test.com</string>
    <string name="phone">Phone</string>
    <string name="phone_example">+39.333.000.11.22</string>
    <string name="address">Address</string>
    <string name="address_example">Via della Croce, 10</string>
    <string name="city">City</string>
    <string name="city_example">Bari</string>
    <string name="province">Province</string>
    <string name="province_example">BA</string>
    <string name="region">region_example</string>
    <string name="region_example">Puglia</string>
    <string name="opening_time">Opening Time</string>
    <string name="openingtime_example">From 09:00 to 20:00</string>
    <string name="click_to_whatch">Click to whatch</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log-out</string>
    <string name="password_example">password_example</string>
    <string name="country_example">Country_example</string>
    <string name="country">Country</string>
    <string name="birthdate_example">Birthdate_example</string>
    <string name="birthdate">Birthdate</string>
    <string name="birthplace_example">Birthplace_example</string>
    <string name="birthplace">Birthplace</string>
    <string name="gender_example">Gender_example</string>
    <string name="gender">Gender</string>
    <string name="surname_example">Surname_example</string>
    <string name="surname">Surname</string>
    <string name="name_example">name_example</string>
    <string name="name">Name</string>
    <string name="name_center">Name Center</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="are_you_already_registered">Are you already registered?</string>
    <string name="title_intro_first_screen">Welcome</string>
    <string name="asilapp">AsilApp</string>
    <string name="description_intro_first_screen">Welcome to AsilApp, a community where no one is excluded</string>
    <string name="description_intro_second_screen">On AsilApp, you will have access to a variety of services including personal profile management, a section dedicated to medical parameters recorded at your reception center, and a section for monitoring expenses.</string>
    <string name="title_intro_second_screen">Manage Your Profile</string>
    <string name="title_intro_third_screen">Explore the Area and Find Points of Interest Around You</string>
    <string name="description_intro_third_screen">Discover points of interest around you through integrated maps, and in no time you will be familiar with the surroundings</string>
    <string name="fourth_intro_third_screen">Our Community Is Ready to Welcome You</string>
    <string name="last_measured_value">Last measured value:</string>
    <string name="measured_at">Measured at:</string>
    <string name="measured_on">Measured on:</string>
    <string name="medical_parameter">Medical parameter</string>
    <string name="age">Age</string>
    <string name="product_name">Product name</string>
    <string name="product_category">Product category</string>
    <string name="category_example">category_example</string>
    <string name="product_price">Product price</string>
    <string name="price_example">Price_example</string>
    <string name="product_date">Product date</string>
    <string name="date_example">Date_example</string>
    <string name="text">text</string>

</resources>