<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4"
    android:layout_marginTop="10dp"
    android:padding="20dp"
    android:background="@drawable/rounded_relative_layout">

    <!--Riga 1 Titolo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_column="0"
        android:layout_row="0"
        />

    <TextView
        android:id="@+id/TextView_Payments_Records_Title_Item_Dialog_AddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_example"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_column="1"
        android:layout_row="0"
        />

    <!--Riga 2 Categoria -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_category"
        android:textSize="20sp"
        android:layout_column="0"
        android:layout_row="1"
        />

    <TextView
        android:id="@+id/TextView_Payments_Records_Category_Item_Dialog_AddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_example"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_column="1"
        android:layout_row="1"
        />

    <!--Riga 3 Prezzo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textSize="20sp"
        android:layout_column="0"
        android:layout_row="2"
        />

    <TextView
        android:id="@+id/TextView_Payments_Records_Price_Item_Dialog_AddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_example"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_column="1"
        android:layout_row="2"
        />

    <!--Riga 4 Data -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_date"
        android:textSize="20sp"
        android:layout_column="0"
        android:layout_row="3"
        />

    <TextView
        android:id="@+id/TextView_Payments_Records_Date_Item_Dialog_AddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_example"
        android:layout_gravity="end"
        android:textSize="20sp"
        android:layout_column="1"
        android:layout_row="3" />
</GridLayout>