<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/TextView_Patient_Mycenter_NameCenter"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reception_centre"/>

    <ImageView
        android:id="@+id/ImageView_Patient_Mycenter_ImageCenter"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingHorizontal="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TextView_Patient_Mycenter_NameCenter"
        android:src="@drawable/center_example"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/LinearLayout_Patient_Mycenter_Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/ImageView_Patient_Mycenter_ImageCenter">

        <TextView
            style="@style/SubSubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/TextView_Patient_Mycenter_Description"
                style="@style/SubSubtitleText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:justificationMode="inter_word"
                android:text="@string/lorem_ipsum"
                android:textSize="18sp" />
        </ScrollView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView_Patient_Mycenter_Description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/LinearLayout_Patient_Mycenter_Description">

        <LinearLayout
            android:id="@+id/LinearLayout_Patient_Mycenter_Contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"

            android:orientation="vertical"
            android:background="@color/primary_background">

            <!-- Riga 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_example"/>
            </LinearLayout>

            <!-- Riga 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_example"/>
            </LinearLayout>

            <!-- Riga 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"/>

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_Address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_example"/>
            </LinearLayout>

            <!-- Riga 4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city"/>

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_City"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city_example"/>
            </LinearLayout>

            <!-- Riga 5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/province"/>

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_Province"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/province_example"/>
            </LinearLayout>

            <!-- Riga 6 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/region"/>

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_Region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region_example"/>
            </LinearLayout>

            <!-- Riga 7 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubSubtitleText"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_time"/>

                <TextView
                    style="@style/SubSubtitleText"
                    android:id="@+id/TextView_Patient_Mycenter_TimeOpening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/openingtime_example"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FloatingActionButton_Patient_Mycenter_Ratingcenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ScrollView_Patient_Mycenter_Description"
        android:src="@drawable/baseline_star_24"
        android:clickable="true"
        android:focusable="true" />
</RelativeLayout>